:bug: button alignment

--- a/src/components/Elements/Avatar/avatar.scss
+++ b/src/components/Elements/Avatar/avatar.scss
@@ -1,5 +1,5 @@
 .bi.bi-avatar {
-  @apply inline-flex items-end relative align-bottom;
+  @apply inline-flex items-end relative align-middle;
 
   + .bi.bi-avatar {
     @apply ml-2;
